--- a/src/components/Header/_header.scss
+++ b/src/components/Header/_header.scss
@@ -4,26 +4,26 @@
   overflow: hidden;
 }
 
-/* Style the links inside the navigation bar */
-.header__navbar a {
-float: left;
-color: #f2f2f2;
-text-align: center;
-padding: 1rem;
-text-decoration: none;
-font-size: 1rem;
-cursor: pointer;
-
+.header__navbar button {
+  border: none;
+  float: left;
+  color: white;
+  background-color: #333;
+  text-align: center;
+  padding: 1rem;
+  font-size: 1rem;
+  cursor: pointer;
 }
 
-/* Change the color of links on hover */
-.header__navbar a:hover {
-background-color: #ddd;
-color: black;
+.header__navbar button:hover {
+  background-color: #ddd;
+  color: black;
 }
 
-/* Add a color to the active/current link */
-.header__navbar a.active {
-background-color: #4CAF50;
-color: white;
+.header__navbar button.active {
+  background-color: #4CAF50;
+  color: white;
+}
+.header__navbar button:focus{
+  
 }
