--- a/src/components/Header/_header.scss
+++ b/src/components/Header/_header.scss
@@ -1,15 +1,17 @@
 .header {
   background-color: #333;
-  border-radius: 3px;
+  border-radius: 5px;
   overflow: hidden;
 }
 
 .header__navbar button {
   border: none;
+  font-weight: bold;
   float: left;
-  color: white;
+  color: #76daff;
   background-color: #333;
   text-align: center;
+  text-shadow: 1rem;
   padding: 1rem;
   font-size: 1rem;
   cursor: pointer;
@@ -21,9 +23,6 @@
 }
 
 .header__navbar button.active {
-  background-color: #4CAF50;
-  color: white;
-}
-.header__navbar button:focus{
-  
+  background-color: #ddd;
+  color: black;
 }
